network-policy-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: network-policy-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: curlimages/curl
          command:
            - sleep
            - "3600"
