rbac-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-test
  namespace: rbac-lab
spec:
  serviceAccountName: pod-reader
  restartPolicy: Never
  containers:
    - name: kubectl
      image: bitnami/kubectl:latest
      command:
        - sleep
        - "3600"
