secret-reader-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-reader-test
  namespace: secrets-lab
spec:
  serviceAccountName: secret-reader
  restartPolicy: Never
  containers:
    - name: kubectl
      image: bitnami/kubectl:latest
      command:
        - sleep
        - "3600"
